name:                hbot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hbot#readme
license:             BSD3
license-file:        LICENSE
author:              Jake Woods
maintainer:          jake@jakewoods.net
copyright:           2018 Jake Woods
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hbot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text == 1.2.2.2,
                       mtl == 2.2.1,
                       monad-loops == 0.4.3
  other-modules:       Command
                       Direction
                       ReadPCombinators
                       World
                       Robot
